# python-unipi-plc

./: LICENSE.md  README.md  pyproject.toml
applications/: plc_test.py  test.py
applications/analog_input/: program.py
applications/conveyor/: conveyor1.py  conveyor2.py
applications/counter/: counter.py
applications/dc_motor/: dc_motor.py
applications/light_bulbs/: light_bulbs1.py  light_bulbs2.py
applications/light_bulbs_02/: light_bulbs.py
applications/logger_test/: logger_test.py
applications/tank_heating_01/: tank_heating.py
applications/tank_heating_02/: tank_heating.py
applications/valve_controller/: launch.sh  valve_controller.py
unipi/: __init__.py  counters.py  email_notification.py  exceptions.py  gpio.py  logging.py  plc.py  switches.py  timers.py
